--- a/ui/app/templates/base.jinja2
+++ b/ui/app/templates/base.jinja2
@@ -73,6 +73,8 @@
         {% block content %}
         {% endblock content %}
     </main>
+
+    <script src="/static/js/dateToggle.js"></script>
 </body>
 
 </html>
