--- a/ui/app/templates/deposit/macro_list.jinja2
+++ b/ui/app/templates/deposit/macro_list.jinja2
@@ -20,10 +20,9 @@
             </tr>
         </thead>
         {% for deposit in deposits %}
-        <tr {% if deposit.status=="pending" %} class="secondary" {%endif%}>
+        <tr>
             <td><a href="{{ url_for('deposit.detail', id=deposit.id) }}">{{ deposit.id }}</a></td>
-
-            <td>{{ deposit.created_at }}</td>
+            <td>{{ human_readable_date(deposit.created_at) | safe }}</td>
 
             <td>
                 <a href="{{ url_for('entity.detail', id=deposit.from_entity_id) }}">{{ deposit.from_entity.name
