--- a/ui/app/templates/split/macro_list.jinja2
+++ b/ui/app/templates/split/macro_list.jinja2
@@ -30,7 +30,7 @@
                         {{ split.actor_entity.name }}
                     </a>
                 </td>
-                <td>{{ split.created_at }}</td>
+                <td>{{ human_readable_date(split.created_at) | safe }}</td>
                 <td>
                     <a href="{{ url_for('entity.detail', id=split.recipient_entity.id) }}">
                         {{ split.recipient_entity.name }}
